possible fix for login on iphone

--- a/src/stylesheets/login.scss
+++ b/src/stylesheets/login.scss
@@ -39,6 +39,7 @@ div.login-container {
 
 			input {
 				margin-left: 0.5em;
+				user-select: all;
 
 				&:focus {
 					outline: none;
